Use Java 17 features